# spaceless_games

./: .gitignore  .gitmodules  LICENSE  README.md
backend/: .gitignore  CMakeLists.txt  CMakePresets.json  server.cpp  vcpkg.json
backend/dicer_games/: ATO.cpp  ATO.hpp  Oathsworn.cpp  Oathsworn.hpp
